--- a/LicentaApp/Views/Shared/EditorTemplates/Clienti.cshtml
+++ b/LicentaApp/Views/Shared/EditorTemplates/Clienti.cshtml
@@ -1,38 +1,41 @@
 ﻿@model LicentaApp.Clienti
 
+<div id="client-editor-section">
+    @Html.HiddenFor(model => model.Id)
+    <div class="row">
+        <div class="col m4 input-field">
+            @Html.TextBoxFor(model => model.Nume)
+            @Html.LabelFor(model => model.Nume)
+            @Html.ValidationMessageFor(model => model.Nume, "", new { @class = "text-danger" })
+        </div>
+        <div class="col m4 input-field">
+            @Html.EditorFor(model => model.Prenume)
+            @Html.LabelFor(model => model.Prenume)
+            @Html.ValidationMessageFor(model => model.Prenume, "", new { @class = "text-danger" })
+        </div>
+        <div class="col m4 input-field">
+            @Html.TextBoxFor(model => model.DataNastere, "{0:dd/MM/yyyy}", new { @class = "datepicker" })
+            @Html.LabelFor(model => model.DataNastere)
+            @Html.ValidationMessageFor(model => model.DataNastere, "", new { @class = "text-danger" })
+        </div>
+    </div>
 
-<div class="row">
-    <div class="col m4 input-field">
-        @Html.TextBoxFor(model => model.Nume)
-        @Html.LabelFor(model => model.Nume)
-        @Html.ValidationMessageFor(model => model.Nume, "", new { @class = "text-danger" })
+    <div class="row">
+        <div class="col m4 input-field">
+            @Html.EditorFor(model => model.Email)
+            @Html.LabelFor(model => model.Email)
+            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+        </div>
+        <div class="col m4 input-field">
+            @Html.EditorFor(model => model.NumarTelefon)
+            @Html.LabelFor(model => model.NumarTelefon)
+            @Html.ValidationMessageFor(model => model.NumarTelefon, "", new { @class = "text-danger" })
+        </div>
+        <div class="col m4 input-field">
+            @Html.EditorFor(model => model.Profesie)
+            @Html.LabelFor(model => model.Profesie)
+            @Html.ValidationMessageFor(model => model.Profesie, "", new { @class = "text-danger" })
+        </div>
     </div>
-    <div class="col m4 input-field">
-        @Html.EditorFor(model => model.Prenume)
-        @Html.LabelFor(model => model.Prenume)
-        @Html.ValidationMessageFor(model => model.Prenume, "", new { @class = "text-danger" })
-    </div>
-    <div class="col m4 input-field">
-        @Html.EditorFor(model => model.DataNastere)
-        @Html.LabelFor(model => model.DataNastere)
-        @Html.ValidationMessageFor(model => model.DataNastere, "", new { @class = "text-danger" })
-    </div>
-</div>
 
-<div class="row">
-    <div class="col m4 input-field">
-        @Html.EditorFor(model => model.Email)
-        @Html.LabelFor(model => model.Email)
-        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-    </div>
-    <div class="col m4 input-field">
-        @Html.EditorFor(model => model.NumarTelefon)
-        @Html.LabelFor(model => model.NumarTelefon)
-        @Html.ValidationMessageFor(model => model.NumarTelefon, "", new { @class = "text-danger" })
-    </div>
-    <div class="col m4 input-field">
-        @Html.EditorFor(model => model.Profesie)
-        @Html.LabelFor(model => model.Profesie)
-        @Html.ValidationMessageFor(model => model.Profesie, "", new { @class = "text-danger" })
-    </div>
 </div>
