--- a/LicentaApp/Views/Shared/Produse/ProductProperties.cshtml
+++ b/LicentaApp/Views/Shared/Produse/ProductProperties.cshtml
@@ -4,21 +4,23 @@
 
 @if (Model?.ProductMetadata != null)
 {
-    foreach (var item in this.Model.ProductMetadata)
-    {
-        <div class="row">
-            <div class="col m12 input-field">
+    <div class="row">
+        @foreach (var item in this.Model.ProductMetadata)
+        {
+            <div class="col m4 input-field">
                 @if (item.DataType.IsEnum)
                 {
                     @Html.DropDownListFor(x => x.ProductProperties[item.PropertyName], item.DataType
-                        .ToSelectList(this.Model.ProductProperties != null && this.Model.ProductProperties.ContainsKey(item.PropertyName) ? this.Model.ProductProperties[item.PropertyName] : null))
-                } else
+                        .ToSelectListWithValue(this.Model.ProductProperties != null && this.Model.ProductProperties.ContainsKey(item.PropertyName) ? this.Model.ProductProperties[item.PropertyName] : null))
+                }
+                else
                 {
                     @Html.TextBoxFor(x => x.ProductProperties[item.PropertyName])
                 }
                 @Html.LabelFor(x => x.ProductProperties[item.PropertyName], item.PropertyDisplayName)
 
             </div>
-        </div>
-    }
+        }
+    </div>
+
 }
