--- a/LicentaApp/Views/Shared/Navbar.cshtml
+++ b/LicentaApp/Views/Shared/Navbar.cshtml
@@ -15,6 +15,9 @@
         <a href="#!" class="tooltipped"  data-position="right" data-tooltip="Profil"><i class="fas fa-user-circle fa-2x"></i></a>
     </li>
     <li class="nav-icon-container">
+        <a href="@Url.Action("Index","Comenzi")" class="tooltipped" data-position="right" data-tooltip="Comenzi"><i class="fas fa-shopping-cart fa-2x"></i></a>
+    </li>
+    <li class="nav-icon-container">
         <a href="@Url.Action("Admin","Home")" class="tooltipped" data-position="right" data-tooltip="Admin"><i class="fas fa-cog fa-2x"></i></a>
     </li>
 </ul>
