--- a/LicentaApp/Views/Produse/Create.cshtml
+++ b/LicentaApp/Views/Produse/Create.cshtml
@@ -6,14 +6,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Adauga produs nou</h2>
+<h4>Adauga produs nou</h4>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.EditorFor(x => x.Produse)
@@ -32,38 +30,24 @@
                 <input type="submit" value="Adauga" class="btn btn-default" />
             </div>
         </div>
-    </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/Bundles/Scripts/Custom/DynamicProductProperties.js")
     <script type="text/javascript">
-        //DynamicProductPropertiesInit('Url.Action("GetProductProperties", "Produse", null)')
-
         @if(this.Model?.ProductMetadata == null)
         {
             <text>$("#product-properties-container").hide();</text>
         }
 
-        $('#tip-produs').on('change',
-            function () {
-                var selectedValue = this.value;
-                $('#product-properties-container')
-                    .load('@Url.Action("GetProductProperties", "Produse", null)' + '?tipProdus=' + selectedValue,
-                        function () {
-                            $('select').formSelect();
-                        });
-
-                if (selectedValue) {
-                    $("#product-properties-container").show();
-                } else {
-                    $("#product-properties-container").hide();
-                }
+        var tipProdus;
+        $(document).ready(function() {
+            $('#tip-produs').change(function() {
+                tipProdus = $(this).val();
+                var containerId = '#product-properties-container';
+                var url = '@Url.Action("GetProductProperties", "Produse", null)?tipProdus=' + tipProdus;
+                loadStepOnItemChange(containerId, url, null, $(this));
             });
+        });
     </script>
 }
